# cf-rating-predictor

./: README.md  pyproject.toml  requirements.txt
configs/: collection.yaml  model.yaml
docs/: features.md
notebooks/: eda.ipynb
reports/: data_quality.md  model_comparison.md
scripts/: run_pipeline.py
src/api/: __init__.py  collector.py
src/app/: streamlit_app.py
src/data/: __init__.py  cleaner.py  schema.py
src/evaluation/: __init__.py  metrics.py
src/features/: __init__.py  encoder.py  pipeline.py
src/inference/: __init__.py  predictor.py
src/models/: __init__.py  baseline.py  trainer.py
src/utils/: __init__.py
