# Specifying how to build the package
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backend.legacy:build"

# Metadata for the project 
[project]
name = "codeforces-rating-predictor"
version = "0.1.0"
description = "ML platform for predicting Codeforces problem difficulty ratings"
requires-python = ">=3.11"

# Required dependencies
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "xgboost>=2.0",
    "requests>=2.31",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "streamlit>=1.28",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "joblib>=1.3",
]

# Optional dependencies
[project.optional-dependencies]
dev = ["pytest>=7.4"]

# Make all packages from /src becomes importable
[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# Pytest configurations
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]